--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .App {
   text-align: center;
 }
+
+.bg-light {
+  background-color: #fafafa;
+  color: #252525;
+}
+
+.bg-dark {
+  background-color: #252525;
+  color: #fafafa;
+}
